#917: Implement 'Context' with 'ScopedValue'.