@@ -94,6 +94,19 @@ allprojects {
 	configurations.all {
 		resolutionStrategy.preferProjectModules()
 	}
+
+	tasks.withType<JavaCompile>().configureEach {
+		options.compilerArgs.add("--enable-preview")
+	}
+
+	tasks.withType<Test>().configureEach {
+		jvmArgs("--enable-preview")
+	}
+
+	tasks.withType<JavaExec>().configureEach {
+		jvmArgs("--enable-preview")
+	}
+
 }
 
 subprojects {
@@ -104,7 +117,6 @@ subprojects {
 	}
 
 	plugins.withType<JavaPlugin> {
-
 		configure<JavaPluginExtension> {
 			modularity.inferModulePath.set(true)
 
